infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/materials/?(.*)
            pathType: Prefix
            backend:
              service:
                name: materials-srv
                port:
                  number: 3000
          - path: /api/machines/?(.*)
            pathType: Prefix
            backend:
              service:
                name: machines-srv
                port:
                  number: 3000
          - path: /api/factories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: factories-srv
                port:
                  number: 3000
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
